2003-02-15  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure: Regen to account for --enable-symbols
	fixes.
	* parsers/assembly/ppc601-eabi/configure: Ditto.

2003-02-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* INSTALL.TXT: Document building with Msys+Mingw.
	Update Cygwin with VC++ build process and include
	note about broken grep and how to work around it.
	Remove instructions that set CC and CFLAGS before
	running configure since that is no longer needed.
	* configure: Regen.
	* configure.in: Set CC and CFLAGS to support
	building with VC++.
	* db/Makefile.am: Don't pass CFLAGS to linker
	since that makes no sense and results in
	warnings from the linker. Don't set CFLAGS
	in a conditional block, the CFLAGS settings
	need to come from configure.
	* db/Makefile.in: Regen.
	* hyper/Makefile.am: Don't pass CFLAGS to the
	linker.
	* hyper/Makefile.in: Regen.
	* parsers/assembly/ppc601-eabi/configure: Regen.
	* parsers/assembly/ppc601-eabi/configure.in: Set
	CC and CFLAGS to support building with VC++. Add
	AC_CONFIG_AUX_DIR and AC_CANONICAL_HOST.

2003-02-13  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/multiview.tcl (AddStatusbar): Anchor the
	text used to display the name of the file
	currently being edited to the east. This
	will still display the text file name when
	the window is too small to display the entire
	file path.

2003-02-12  Mo DeJong  <mdejong@users.sourceforge.net>

	Regenerate all Makefile.in files because I
	forgot to add clsbr_private.xpm. It needed
	it anyway.

	* Makefile.in:
	* bitmaps/Makefile.am: Add clsbr_private.xpm.
	* bitmaps/Makefile.in:
	* db/Makefile.in:
	* demo/Makefile.in:
	* doc/Makefile.in:
	* doc/html/Makefile.in:
	* etc/Makefile.in:
	* etc/sn_toolchains/Makefile.in:
	* gui/Makefile.in:
	* hyper/Makefile.in:
	* misc/Makefile.in:
	* misc/libutils/Makefile.in:
	* packages/Makefile.in:
	* parsers/Makefile.in:
	* parsers/assembly/Makefile.in:
	* parsers/chill/Makefile.in:
	* parsers/cobol/Makefile.in: